--- a/index .html
+++ b/index .html
@@ -7,7 +7,12 @@
 
 <body>
 
-Ez egy weblap
+<h1>Ez egy weblap!</h1>
+<h2>Ez egy weblap!</h2>
+<h3>Ez egy weblap!</h3>
+<h4>Ez egy weblap!</h4>
+<h5>Ez egy weblap!</h5>
+<h6>Ez egy weblap!</h6>
 
 </body>
 
